<resources>
    <string name="app_name">VroomMate</string>

    <string name="model_placeholder">Model: %1$s</string>
    <string name="engine_placeholder">Engine: %1$s</string>
    <string name="power_placeholder">Power: %1$s</string>
    <string name="speed_placeholder">0-100 KM/H: %1$s</string>
    <string name="topSpeed_placeholder">Top Speed: %1$s</string>
    <string name="rpm_placeholder">Max RPM: %1$s</string>
    <string name="torque_placeholder">Torque: %1$s</string>
    <string name="year_placeholder">Year: %1$d</string>


</resources>